--- a/package.json
+++ b/package.json
@@ -5,7 +5,19 @@
   "scripts": {
     "prestart": "docker-compose up -d",
     "start": "nodemon src/server.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src/"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint src/ --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "license": "ISC",
   "dependencies": {
@@ -19,6 +31,11 @@
     "qs-middleware": "^1.0.3"
   },
   "devDependencies": {
+    "eslint": "5.15.3",
+    "babel-eslint": "10.0.2",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.5",
+    "eslint-plugin-import": "^2.18.0",
     "jest": "^24.8.0"
   }
 }
