--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "setInterval": true
   },
   "rules": {
+    "semi": "error",
     "curly": "error",
     "dot-notation": "error",
     "eqeqeq": "error",
