--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,5 +2,8 @@ version: "3"
 services:
   mongo:
     image: mongo
+    container_name: mongo
     ports:
       - "27020:27017"
+    environment:
+      - MONGODB_DATABASE=incident-management
