--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "prestart": "docker-compose up -d",
     "start": "nodemon src/server.js",
     "test": "jest",
-    "cover": "NODE_ENV=testing jest --coverage --bail --forceExit",
-    "lint": "eslint src/"
+    "cover": "npm run prestart && NODE_ENV=testing jest --config ./jest-cover.json --coverage --bail --forceExit --runInBand",
+    "lint": "eslint src/",
+    "pretest": ""
   },
   "lint-staged": {
     "*.js": [
@@ -37,12 +38,12 @@
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "eslint-plugin-import": "^2.18.0",
-    "jest": "^24.8.0"
+    "jest": "^24.8.0",
+    "@types/jest": "24.0.15"
   },
   "jest": {
     "roots": [
-      "<rootDir>/src",
-      "<rootDir>/test"
+      "<rootDir>/src"
     ],
     "testRegex": ".spec.js$",
     "testPathIgnorePatterns": [
