--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,6 @@ git:
   depth: false
 
 cache:
-  apt: true
   bundler: true
   directories:
   - node_modules
@@ -27,7 +26,7 @@ jobs:
       name: "Unit test"
       script:
         - npm run lint
-        - NODE_ENV=testing jest --config ./jest-cover.json --coverage --bail --forceExit --runInBand
+        - NODE_ENV=testing-travis jest --config ./jest-cover.json --coverage --bail --forceExit --runInBand
     
     - stage: release
       name: "Release"
