--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,26 @@
 version: "3"
 services:
+  app:
+    container_name: app
+    restart: "always"
+    build: .
+    ports:
+      - "3000:3000"
+    links:
+      - mongo
+    networks: 
+      - backend
+
   mongo:
     image: mongo
     container_name: mongo
     ports:
       - "27020:27017"
+    networks: 
+      - backend
     environment:
       - MONGODB_DATABASE=incident-management
+
+networks: 
+  backend:
+    driver: "bridge"
