--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lint-staged": "8.1.5",
     "eslint-plugin-import": "^2.18.0",
     "jest": "^24.8.0",
+    "coveralls": "3.0.4",
     "@types/jest": "24.0.15"
   },
   "jest": {
