--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,28 @@
       "runtimeArgs": [
         "--nolazy"
       ]
+    },
+    {
+      "name": "Debug integration test",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceRoot}/node_modules/.bin/jest",
+      "stopOnEntry": false,
+      "env": {
+        "NODE_ENV": "testing"
+      },
+      "args": [
+        "--config",
+        "./jest-cover.json",
+        "${relativeFile}",
+        "--forceExit"
+      ],
+      "cwd": "${workspaceRoot}",
+      "preLaunchTask": null,
+      "runtimeExecutable": null,
+      "runtimeArgs": [
+        "--nolazy"
+      ]
     }
   ]
 }
